loopwhile.BaggleSeeker.scala.error
Erreur de compilation :
BaggleSeeker:2: error: ';' expected but ')' found.
  avance)()
        ^